--- a/produtos/aruana.html
+++ b/produtos/aruana.html
@@ -15,7 +15,7 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle - Andropogon</title>
+	<title>DuValle - Aruana</title>
 </head>
 <body>
 
@@ -74,26 +74,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Andropogon</h2>
+				<h2 class="titleContent">Aruana</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<img src="../assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProductItem">
+				<img src="../assets/imgs/produtos/aruana.jpg" class="img-fluid imgProductItem">
 				<table class="table">
 				  <thead>
 				    <tr>
-				      <th scope="col"><h3 class="titleProduct">Andropogon</h3></th>
+				      <th scope="col"><h3 class="titleProduct">Aruana</h3></th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
 				      <th scope="row">Cultivar</th>
-				      <td>Andropogon</td>
+				      <td>Aruana</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Nome científico</th>
-				      <td>Andropogon gayanus</td>
+				      <td>Panicum maximum</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Ciclo</th>
@@ -109,7 +109,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Fertibilidade do solo</th>
-				      <td>Baixa</td>
+				      <td>Médio</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -122,11 +122,11 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Seca</th>
-				      <td>Alta</td>
+				      <td>Média</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Frio</th>
-				      <td>Média</td>
+				      <td>Alta</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Umidade</th>
@@ -155,7 +155,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Pontos(V.C.ha)</th>
-				      <td>320 à 340</td>
+				      <td>180 à 340</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -172,11 +172,11 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Prot.(M.S.%)</th>
-				      <td>08 à 10</td>
+				      <td>08 à 12</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Palatabilidade</th>
-				      <td>Boa</td>
+				      <td>Ótima</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -210,15 +210,15 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Tipo</th>
-				      <td>Pastoreio</td>
+				      <td>Pastoreio-Feno</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Animais</th>
-				      <td>Bovino</td>
+				      <td>Bov.-Eq.-Cap.</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Consorciação</th>
-				      <td>Calop.-Stylo</td>
+				      <td>Calop.-Puerária</td>
 				    </tr>
 				  </tbody>
 				</table>
