--- a/produtos/milheto.html
+++ b/produtos/milheto.html
@@ -15,7 +15,7 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle - Andropogon</title>
+	<title>DuValle - Milheto</title>
 </head>
 <body>
 
@@ -74,30 +74,30 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Andropogon</h2>
+				<h2 class="titleContent">Milheto</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<img src="../assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProductItem">
+				<img src="../assets/imgs/produtos/milheto.jpg" class="img-fluid imgProductItem">
 				<table class="table">
 				  <thead>
 				    <tr>
-				      <th scope="col"><h3 class="titleProduct">Andropogon</h3></th>
+				      <th scope="col"><h3 class="titleProduct">Milheto</h3></th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
 				      <th scope="row">Cultivar</th>
-				      <td>Andropogon</td>
+				      <td>Milheto</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Nome científico</th>
-				      <td>Andropogon gayanus</td>
+				      <td>Pennisetum glaucum</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Ciclo</th>
-				      <td>Perene</td>
+				      <td>Anual</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Família</th>
@@ -105,7 +105,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Crescimento</th>
-				      <td>Touceira</td>
+				      <td>Ereto</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Fertibilidade do solo</th>
@@ -122,11 +122,11 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Seca</th>
-				      <td>Alta</td>
+				      <td>Médio</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Frio</th>
-				      <td>Média</td>
+				      <td>Baixa</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Umidade</th>
@@ -147,7 +147,7 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Época</th>
-				      <td>Est. chuva</td>
+				      <td>Est. chuvosa</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Profundidade</th>
@@ -155,7 +155,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Pontos(V.C.ha)</th>
-				      <td>320 à 340</td>
+				      <td>1700</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -172,11 +172,11 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Prot.(M.S.%)</th>
-				      <td>08 à 10</td>
+				      <td>15 à 16</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Palatabilidade</th>
-				      <td>Boa</td>
+				      <td>Ótima</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -189,7 +189,7 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Formação(dias)</th>
-				      <td>90 à 120</td>
+				      <td>80</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Entrada animais</th>
@@ -197,7 +197,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Saída animais</th>
-				      <td>40 cm</td>
+				      <td>20 cm</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -210,15 +210,15 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Tipo</th>
-				      <td>Pastoreio</td>
+				      <td>Past.-Silagem-Feno</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Animais</th>
-				      <td>Bovino</td>
+				      <td>Bovinos</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Consorciação</th>
-				      <td>Calop.-Stylo</td>
+				      <td>Lab lab-Guandu</td>
 				    </tr>
 				  </tbody>
 				</table>
