--- a/produtos/mombaca.html
+++ b/produtos/mombaca.html
@@ -15,7 +15,7 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle - Andropogon</title>
+	<title>DuValle - Mombaça</title>
 </head>
 <body>
 
@@ -74,26 +74,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Andropogon</h2>
+				<h2 class="titleContent">Mombaça</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<img src="../assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProductItem">
+				<img src="../assets/imgs/produtos/mombaca.jpg" class="img-fluid imgProductItem">
 				<table class="table">
 				  <thead>
 				    <tr>
-				      <th scope="col"><h3 class="titleProduct">Andropogon</h3></th>
+				      <th scope="col"><h3 class="titleProduct">Mombaça</h3></th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
 				      <th scope="row">Cultivar</th>
-				      <td>Andropogon</td>
+				      <td>Mombaça</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Nome científico</th>
-				      <td>Andropogon gayanus</td>
+				      <td>Panicum maximum</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Ciclo</th>
@@ -109,7 +109,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Fertibilidade do solo</th>
-				      <td>Baixa</td>
+				      <td>Média</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -122,7 +122,7 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Seca</th>
-				      <td>Alta</td>
+				      <td>Média</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Frio</th>
@@ -147,7 +147,7 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Época</th>
-				      <td>Est. chuva</td>
+				      <td>Est. chuvosa</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Profundidade</th>
@@ -155,7 +155,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Pontos(V.C.ha)</th>
-				      <td>320 à 340</td>
+				      <td>180 à 340</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -168,15 +168,15 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">M.S.(t/ha/ano)</th>
-				      <td>10 à 15</td>
+				      <td>25 à 30</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Prot.(M.S.%)</th>
-				      <td>08 à 10</td>
+				      <td>10 à 13</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Palatabilidade</th>
-				      <td>Boa</td>
+				      <td>Ótima</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -197,7 +197,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Saída animais</th>
-				      <td>40 cm</td>
+				      <td>35 cm</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -214,11 +214,11 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Animais</th>
-				      <td>Bovino</td>
+				      <td>Bov.-Eq.</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Consorciação</th>
-				      <td>Calop.-Stylo</td>
+				      <td>Calop.-Soja P.-Stylo.</td>
 				    </tr>
 				  </tbody>
 				</table>
