--- a/produtos/humidicola.html
+++ b/produtos/humidicola.html
@@ -15,7 +15,7 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle - Andropogon</title>
+	<title>DuValle - Humidícola</title>
 </head>
 <body>
 
@@ -74,26 +74,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Andropogon</h2>
+				<h2 class="titleContent">Humidícola</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<img src="../assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProductItem">
+				<img src="../assets/imgs/produtos/humidicola.jpg" class="img-fluid imgProductItem">
 				<table class="table">
 				  <thead>
 				    <tr>
-				      <th scope="col"><h3 class="titleProduct">Andropogon</h3></th>
+				      <th scope="col"><h3 class="titleProduct">Humidícola</h3></th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
 				      <th scope="row">Cultivar</th>
-				      <td>Andropogon</td>
+				      <td>B.Humidícola</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Nome científico</th>
-				      <td>Andropogon gayanus</td>
+				      <td>Brachiaria humidícola</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Ciclo</th>
@@ -105,7 +105,7 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Crescimento</th>
-				      <td>Touceira</td>
+				      <td>Estolonífera</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Fertibilidade do solo</th>
@@ -130,11 +130,11 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Umidade</th>
-				      <td>Baixa</td>
+				      <td>Alta</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Cigarrinha</th>
-				      <td>Alta</td>
+				      <td>Média</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -147,15 +147,15 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Época</th>
-				      <td>Est. chuva</td>
+				      <td>Est. chuvosa</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Profundidade</th>
-				      <td>1 cm</td>
+				      <td>2 cm</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Pontos(V.C.ha)</th>
-				      <td>320 à 340</td>
+				      <td>320 à 480</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -168,11 +168,11 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">M.S.(t/ha/ano)</th>
-				      <td>10 à 15</td>
+				      <td>10 à 12</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Prot.(M.S.%)</th>
-				      <td>08 à 10</td>
+				      <td>11 à 12</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Palatabilidade</th>
@@ -189,15 +189,15 @@
 				  <tbody>
 				    <tr>
 				      <th scope="row">Formação(dias)</th>
-				      <td>90 à 120</td>
+				      <td>150 à 180</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Entrada animais</th>
-				      <td>80 cm</td>
+				      <td>40 cm</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Saída animais</th>
-				      <td>40 cm</td>
+				      <td>20 cm</td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -214,11 +214,11 @@
 				    </tr>
 				    <tr>
 				      <th scope="row">Animais</th>
-				      <td>Bovino</td>
+				      <td>Bov.-Eq.-Ov.</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">Consorciação</th>
-				      <td>Calop.-Stylo</td>
+				      <td>Puer.-Guandu-Leucena</td>
 				    </tr>
 				  </tbody>
 				</table>
