--- a/produtos.html
+++ b/produtos.html
@@ -174,7 +174,7 @@
 						</a>
 					</li>
 					<li class="productsItem">
-						<a href="produtos/decumbens.html">
+						<a href="produtos/aveia-preta.html">
 							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Aveia Preta</span>
 						</a>
@@ -192,8 +192,8 @@
 						</a>
 					</li>
 					<li class="productsItem">
-						<a href="produtos/estilozantes-campo-grande.html">
-							<img src="assets/imgs/produtos/estilozantes-campo-grande.jpg" class="img-fluid imgProduct">
+						<a href="produtos/estilosantes-campo-grande.html">
+							<img src="assets/imgs/produtos/estilosantes-campo-grande.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Estilozantes Campo Grande</span>
 						</a>
 					</li>
