--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 				    	Aqui vai o conteudo de Visão da DuValle.<br/>
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 					</p>
+					<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao">
 					<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
 				  </div> 
 				  <div id="missao" class="tab-pane fade">
@@ -107,7 +108,8 @@
 				    	A missão da DuValle vai aqui.<br/>
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 				    </p>
-				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome">
+				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;">
+				    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
 				  </div>
 				  <div id="valores" class="tab-pane fade">
 				    <p>
@@ -115,6 +117,7 @@
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 				    </p>
 				    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
+				    <img src="assets/imgs/overlay/seeds-pattern-2.svg">
 				  </div>
 				</div>
 			</div>
