--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a class="nav-link white" href="produtos.html">Produtos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link white" href="#">Seja nosso parceiro</a>
+        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
         <a class="nav-link white" href="#">Contato</a>
