--- a/produtos.html
+++ b/produtos.html
@@ -55,7 +55,7 @@
         <a class="nav-link green" href="produtos.html">Produtos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link green" href="#">Seja nosso parceiro</a>
+        <a class="nav-link green" href="parceiro.html">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
         <a class="nav-link green" href="#">Contato</a>
