--- a/parceiro.html
+++ b/parceiro.html
@@ -15,55 +15,55 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle</title>
+	<title>DuValle - Seja nosso parceiro</title>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top white">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top green">
 	<a class="navbar-brand" href="index.html">
-		<img src="assets/imgs/icons/white/logo-icon-white.svg" class="imgSvgLogo">
+		<img src="assets/imgs/icons/green/logo-icon.svg" class="imgSvgLogo">
 	</a>
 	<ul class="listaNav">	
 		<li class="itemNav">
 			<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
 			</a>
 		</li>
 		<li class="itemNav">
 			<a href="tel:+551832634272" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/phone-icon-white.svg" class="imgSvgLogo">
+			  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
 			</a>
 		</li>
 		<li class="itemNav">
 			<a href="https://wa.me/+5518996613390" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
 			</a>
 		</li>
 		<li class="itemNav">
 			<a class="navbar-toggler navbarItem" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-			  	<img src="assets/imgs/icons/white/hamburger-icon-white.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/green/hamburger-icon.svg" class="imgSvg">
 			</a>
 		</li>
 	</ul>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link green" href="index.html">Home</a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link white" href="index.html">Home</a>
+        <a class="nav-link green" href="produtos.html">Produtos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link white" href="produtos.html">Produtos</a>
+        <a class="nav-link green" href="parceiro.html">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link white" href="#">Seja nosso parceiro</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link white" href="#">Contato</a>
+        <a class="nav-link green" href="#">Contato</a>
       </li>
       <li class="nav-item fixed-bottom text-center">
-      	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
-      	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
-      	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
+      	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg img-fluid">
+      	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo img-fluid">
+      	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg img-fluid">
       	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
       </li>
     </ul>
@@ -76,45 +76,43 @@
 			<div class="col-12 col-md-12 col-sm-12">
 				<h2 class="titleContent">Seja nosso parceiro</h2>
 				<form>
-					<label>Tipo</label>
+					<label class="txtLabelForm">Tipo</label>
 				  <div class="form-row">
-				    <div class="form-group col-6 col-md-6">
-				      <button type="" class="form-control" id="inputTipo">Pessoa Física</button>
-				      <!-- <input type="email" class="form-control" id="inputEmail4" placeholder="Email"> -->
+				    <div class="form-group col-12 col-md-12">
+				      <button type="button" class="form-control btnFisica" id="inputTipo">Pessoa Física</button>
+				      <button type="button" class="form-control btnJuridica" id="inputTipo">Pessoa Jurídica</button>
 				    </div>
 				    <div class="form-group col-6 col-md-6">
-				      <button type="" class="form-control" id="inputTipo">Pessoa Jurídica</button>
-				      <!-- <input type="password" class="form-control" id="inputPassword4" placeholder="Password"> -->
 				    </div>
 				  </div>
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
-					  <label for="inputName">Nome</label>
-					  <input type="text" class="form-control" id="inputName" placeholder="">
+					  <label class="txtLabelForm" for="inputName">Nome</label>
+					  <input type="text" class="form-control inputDefault" id="inputName" placeholder="Maria Inc">
 					</div>
 				  	<div class="form-group col-md-6">
-				      <label for="inputTel">Telefone</label>
-				      <input type="tel" class="form-control" id="inputTel" placeholder="(11)445-4534">
+				      <label class="txtLabelForm" for="inputTel">Telefone</label>
+				      <input type="tel" class="form-control inputDefault" id="inputTel" placeholder="(11)445-4534">
 				  	</div>
 				  </div>
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
-				      <label for="inputlEmail">E-mail</label>
-				      <input type="email" class="form-control" id="inputEmail" placeholder="email@email.com">
+				      <label class="txtLabelForm" for="inputlEmail">E-mail</label>
+				      <input type="email" class="form-control inputDefault" id="inputEmail" placeholder="email@email.com">
 				    </div>
 				    <div class="form-group col-md-6">
-				      <label for="inputCep">CEP</label>
-				      <input type="text" class="form-control" id="inputCep" placeholder="09865-670">
+				      <label class="txtLabelForm" for="inputCep">CEP</label>
+				      <input type="text" class="form-control inputDefault" id="inputCep" placeholder="09865-670">
 				    </div>
 				  </div>
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
-				      <label for="inputlCidade">Cidade</label>
-				      <input type="email" class="form-control" id="inputCidade" placeholder="São Paulo">
+				      <label class="txtLabelForm" for="inputlCidade">Cidade</label>
+				      <input type="email" class="form-control inputDefault" id="inputCidade" placeholder="São Paulo">
 				    </div>
 				    <div class="form-group col-md-6">
-				      <label for="inputlCidade">UF</label>
-				      <select id="inputEstado" class="form-control">
+				      <label class="txtLabelForm" for="inputlCidade">UF</label>
+				      <select id="inputEstado" class="form-control inputDefault">
 				        <option selected>Estado</option>
 				        <option value="AC">AC</option>
 						<option value="AL">AL</option>
@@ -148,19 +146,21 @@
 				  </div>
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
-				      <label for="inputlEndereco">Endereço</label>
-				      <input type="email" class="form-control" id="inputEndero" placeholder="Rua Joaquim Chuas">
+				      <label class="txtLabelForm" for="inputlEndereco">Endereço</label>
+				      <input type="email" class="form-control inputDefault" id="inputEndero" placeholder="Rua Joaquim Chuas">
 				    </div>
 				    <div class="form-group col-md-6">
-				      <label for="inputNumero">Numero</label>
-				      <input type="number" class="form-control" id="inputNumero" placeholder="5040">
+				      <label class="txtLabelForm" for="inputNumero">Numero</label>
+				      <input type="number" class="form-control inputDefault" id="inputNumero" placeholder="5040">
 				    </div>
 				  </div>
 				  <div class="form-group">
-				    <label for="exampleFormControlTextarea1">Mensagem</label>
+				    <label class="txtLabelForm" for="exampleFormControlTextarea1">Mensagem</label>
 				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 				  </div>
-				  <button type="submit" class="btn btn-primary">Enviar</button>
+				  <div class="form-group text-center">
+				  	<button type="submit" class="btnSendForm">Enviar</button>
+				  </div>
 				</form>
 			</div>
 		</div>
@@ -168,7 +168,7 @@
 </section>
 
 
-<!-- <footer id="footer">
+<footer id="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
@@ -178,12 +178,49 @@
 					Rodovia Raposo Tavares, Km 596,<br/>
 					Distrito Industrial<br/>
 					Cx.postal 93<br/>
-					Santo Anastacio - SP, CEP 19360-000<br/>
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="335" height="186" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="container" style="margin-top: 54px;">
+		<div class="row">
+			<div class="col-12">
+				<ul style="list-style: none;padding: 0;">
+					<li style="padding: 0 12px; float: left;padding: 0;">
+						<img src="assets/imgs/icons/green/logo-icon.svg" style="width: 32px;">
+					</li>
+					<li style="padding: 0 12px; float: right;">
+						<img src="assets/imgs/icons/green/email-icon.svg" style="width: 21px;">	
+					</li>
+					<li style="padding: 0 12px; float: right;">
+						<img src="assets/imgs/icons/green/phone-icon.svg" style="width: 21px;">	
+					</li>
+					<li style="padding: 0 12px; float: right;">
+						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;">
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
+					Santo Anastácio - São Paulo, Brasil
+				</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">Copyright © 2019 DuValle</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Desenvolvido por Victor Maloyama<br/>
+					e Guilherme Augusto
 				</p>
 			</div>
 		</div>
 	</div>
-</footer> -->
+</footer>
 
 <!-- Jquery -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
