--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
-					<a href="#" class="btnGray">Saiba mais</a>
+					<a href="#" class="btnGreenHome">Saiba Mais</a>
 				</div>
 			</div>
 		</div>
@@ -97,27 +97,30 @@
 				<div class="tab-content">
 				  <div id="visao" class="tab-pane fade in active show">
 				    <p>
-				    	Aqui vai o conteudo de Visão da DuValle.<br/>
-				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+				    	Ser referência brasileira como uma empresa de excelência em sementes para pastagem e adubação verde, que promove desenvolvimento para a sociedade rural e que as pessoas tenham orgulho de trabalhar. 
 					</p>
 					<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao">
 					<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
 				  </div> 
 				  <div id="missao" class="tab-pane fade">
 				    <p>
-				    	A missão da DuValle vai aqui.<br/>
-				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+				    	Atender às necessidades do mercado de sementes, com novas tecnologias, genéticas, eficiência e integraçã, objetivando melhorar a rentabilidade dos nossos clientes. 
 				    </p>
 				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;">
 				    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
 				  </div>
 				  <div id="valores" class="tab-pane fade">
 				    <p>
-				    	Esses são os valores da DuValle.<br/>
-				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+				    	<ul style="list-style: none;margin:0;padding:0;">
+				    		<p>Reconhecimento de nossos colaboradores.</p>
+				    		<p>Ética nas relações comerciais.</p>
+				    		<p>Foco no relacionamento e comprometimento.</p>
+				    		<p>Aperfeiçõamento profissional.</p>
+				    		<p>Agilidade, flexibilidade e criatividade.</p>
+				    	</ul> 
 				    </p>
 				    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
-				    <img src="assets/imgs/overlay/seeds-pattern-2.svg">
+				    <img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores">
 				  </div>
 				</div>
 			</div>
@@ -125,7 +128,7 @@
 	</div>
 </section>
 
-<!-- <footer id="footer">
+<footer id="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
@@ -135,12 +138,49 @@
 					Rodovia Raposo Tavares, Km 596,<br/>
 					Distrito Industrial<br/>
 					Cx.postal 93<br/>
-					Santo Anastacio - SP, CEP 19360-000<br/>
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="335" height="186" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<ul class="footerList">
+					<li>
+						<img src="assets/imgs/logos/logo-w-text.svg">
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg">
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/phone-icon.svg">	
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/email-icon.svg">
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<p class="textFooter" style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
+					Santo Anastácio - São Paulo, Brasil
+				</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;border-top: 0.5px solid #C1C1C1;padding-top: 10.5px;">Copyright &copy; 2019 DuValle</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a><br/>
+					e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
 				</p>
 			</div>
 		</div>
 	</div>
-</footer> -->
+</footer>
 
 <!-- Jquery -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
