--- a/parceiro.html
+++ b/parceiro.html
@@ -51,10 +51,10 @@
       <li class="nav-item">
         <a class="nav-link green" href="index.html">Home</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link green" href="produtos.html">Produtos</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link green" href="parceiro.html">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
@@ -187,35 +187,35 @@
 			</div>
 		</div>
 	</div>
-	<div class="container" style="margin-top: 54px;">
+	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<ul style="list-style: none;padding: 0;">
-					<li style="padding: 0 12px; float: left;padding: 0;">
-						<img src="assets/imgs/icons/green/logo-icon.svg" style="width: 32px;">
+				<ul class="footerList">
+					<li>
+						<img src="assets/imgs/logos/logo-w-text.svg">
 					</li>
-					<li style="padding: 0 12px; float: right;">
-						<img src="assets/imgs/icons/green/email-icon.svg" style="width: 21px;">	
+					<li>
+						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg">
 					</li>
-					<li style="padding: 0 12px; float: right;">
-						<img src="assets/imgs/icons/green/phone-icon.svg" style="width: 21px;">	
+					<li>
+						<img src="assets/imgs/icons/green/phone-icon.svg">	
 					</li>
-					<li style="padding: 0 12px; float: right;">
-						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;">
+					<li>
+						<img src="assets/imgs/icons/green/email-icon.svg">
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+				<p class="textFooter">
 					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
 					Santo Anastácio - São Paulo, Brasil
 				</p>
-				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">Copyright © 2019 DuValle</p>
+				<p class="textFooterLine">Copyright &copy; 2019 DuValle</p>
 				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
-					Desenvolvido por Victor Maloyama<br/>
-					e Guilherme Augusto
+					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a><br/>
+					e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
 				</p>
 			</div>
 		</div>
