--- a/produtos.html
+++ b/produtos.html
@@ -221,6 +221,60 @@
 	</div>
 </section>
 
+<footer id="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-md-12 col-sm-12">
+				<h3 class="titleFooter">Onde estamos?</h3>
+				<p class="textFooter">
+					UBS Santo Anastácio<br/>
+					Rodovia Raposo Tavares, Km 596,<br/>
+					Distrito Industrial<br/>
+					Cx.postal 93<br/>
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="335" height="186" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<ul class="footerList">
+					<li>
+						<img src="assets/imgs/logos/logo-w-text.svg">
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg">
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/phone-icon.svg">	
+					</li>
+					<li>
+						<img src="assets/imgs/icons/green/email-icon.svg">
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
+					Santo Anastácio - São Paulo, Brasil
+				</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;border-top: 0.5px solid #C1C1C1;padding-top: 10.5px;">Copyright &copy; 2019 DuValle</p>
+				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a><br/>
+					e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
+				</p>
+			</div>
+		</div>
+	</div>
+</footer>
+
 
 
 <!-- Jquery -->
