--- a/parceiro.html
+++ b/parceiro.html
@@ -58,7 +58,7 @@
         <a class="nav-link green" href="parceiro.html">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link green" href="#">Contato</a>
+        <a class="nav-link green" href="contato.html">Contato</a>
       </li>
       <li class="nav-item fixed-bottom text-center">
       	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg img-fluid">
