--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top white">
 	<a class="navbar-brand" href="index.html">
-		<img src="assets/imgs/icons/white/logo-icon-white.svg" class="imgSvgLogo">
+		<img class="imgSvgLogo" src="assets/imgs/icons/white/logo-icon-white.svg">
 	</a>
 	<ul class="listaNav">	
 		<li class="itemNav">
@@ -46,7 +46,7 @@
 			</a>
 		</li>
 	</ul>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div id="navbarNavDropdown" class="collapse navbar-collapse">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link white" href="index.html">Home</a>
@@ -143,7 +143,7 @@
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="335" height="186" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="auto" height="auto" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
@@ -187,6 +187,8 @@
 <!-- Bootstrap -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
+<!-- Main Script -->
+<script type="text/javascript" src="assets/js/main.js"></script>
+
 </body>
 </html>
